fix: update agent image tag in readme
when a new version of the agent is released, make sure we
increment the default value for image.tag mentioned in the
readme file in addition to the values file

--- a/.github/updatecli.d/config-agent-release.yaml
+++ b/.github/updatecli.d/config-agent-release.yaml
@@ -43,6 +43,15 @@ targets:
       file: "charts/agent/values.yaml"
       key: "$.image.tag"
 
+  updateAgentReadme:
+    name: "update agent tag in readme table"
+    kind: file
+    scmid: github
+    spec:
+      file: "charts/agent/README.md"
+      matchpattern: '\| `\d+.\d+.\d+`'
+      replacepattern: '| `{{ requiredEnv "AGENT_RELEASE" }}`'
+
   bumpAgentChart:
     name: "bump the chart version of the agent chart"
     kind: helmchart
