fix(agent): allows to specify non semver tags

--- a/charts/agent/templates/daemonset.yaml
+++ b/charts/agent/templates/daemonset.yaml
@@ -219,7 +219,7 @@ spec:
               value: /opt/draios/etc/ca-certs/{{- include "sysdig.custom_ca.keyName"  (dict "global" .Values.global.ssl "component" .Values.ssl) -}}
             {{- end }}
           readinessProbe:
-            {{- if ge (semver "12.18.0" | (semver .Values.image.tag).Compare) 0 }}
+            {{- if eq (include "agent.enableHttpProbes" .) "true" }}
             httpGet:
               path: /healthz
               port: 24483
