test: add agent http proxy tests

--- a/charts/agent/tests/secrets_test.yaml
+++ b/charts/agent/tests/secrets_test.yaml
@@ -53,3 +53,23 @@ tests:
           path: data.sysdig-new-password-key1
           value: bXlwYXNzd29yZA==
         documentIndex: 2
+
+  - it: Check proxy secret
+    set:
+      sysdig:
+        accessKey: AAAAAAAA-BBBB-CCCC-DDDD-EEEEEEEEEEEE
+        settings:
+          http_proxy:
+            proxy_user: username
+            proxy_password: password
+    asserts:
+      - isKind:
+          of: Secret
+      - equal:
+          path: data.proxy_user
+          value: dXNlcm5hbWU=
+        documentIndex: 1
+      - equal:
+          path: data.proxy_password
+          value: cGFzc3dvcmQ=
+        documentIndex: 1
