--- a/charts/agent/tests/api_endpoint_region_test.yaml
+++ b/charts/agent/tests/api_endpoint_region_test.yaml
@@ -510,3 +510,18 @@ tests:
     asserts:
       - failedTemplate:
           errorMessage: "global.sysdig.region=us7 provided is not recognized."
+
+  - it: Checking proxy_user and proxy_password are not set
+    set:
+      sysdig:
+        settings:
+          http_proxy:
+            proxy_user: "user"
+            proxy_password: "password"
+    asserts:
+      - notMatchRegex:
+          path: data['dragent.yaml']
+          pattern: .*username.*
+      - notMatchRegex:
+          path: data['dragent.yaml']
+          pattern: .*password.*
