--- a/charts/agent/tests/secrets_test.yaml
+++ b/charts/agent/tests/secrets_test.yaml
@@ -54,7 +54,7 @@ tests:
           value: bXlwYXNzd29yZA==
         documentIndex: 2
 
-  - it: Check proxy secret
+  - it: Should create proxy secret with http_proxy settings
     set:
       sysdig:
         accessKey: AAAAAAAA-BBBB-CCCC-DDDD-EEEEEEEEEEEE
@@ -73,3 +73,19 @@ tests:
           path: data.proxy_password
           value: cGFzc3dvcmQ=
         documentIndex: 1
+
+  - it: Should not create proxy secret with http_proxy settings and autopilot enabled
+    set:
+      sysdig:
+        accessKey: AAAAAAAA-BBBB-CCCC-DDDD-EEEEEEEEEEEE
+        settings:
+          http_proxy:
+            proxy_user: username
+            proxy_password: password
+      gke:
+        autopilot: true
+    asserts:
+      - hasDocuments:
+          count: 1
+      - isKind:
+          of: Secret
