--- a/charts/cluster-scanner/templates/deployment.yaml
+++ b/charts/cluster-scanner/templates/deployment.yaml
@@ -394,6 +394,12 @@ spec:
                 name: {{ include "cluster-scanner.fullname" . }}
                 key: sysdig_verify_certificate
                 optional: true
+          - name: REGISTRY_VERIFY_CERTIFICATE
+            valueFrom:
+              configMapKeyRef:
+                name: {{ include "cluster-scanner.fullname" . }}
+                key: sysdig_verify_registry_certificate
+                optional: true
           - name: NATS_URL
             valueFrom:
               configMapKeyRef:
