--- a/charts/node-analyzer/Chart.yaml
+++ b/charts/node-analyzer/Chart.yaml
@@ -3,7 +3,7 @@ name: node-analyzer
 description: Sysdig Node Analyzer
 
 # currently matching Sysdig's appVersion 1.14.34
-version: 1.19.0
+version: 1.19.1
 appVersion: 12.9.0
 keywords:
   - monitoring
@@ -20,8 +20,7 @@ sources:
 maintainers:
   - name: chen-shmilovich-sysdig
     email: chen.shmilovich@sysdig.com
-  - name: giuse-sysdig
-    email: giuseppe.esposito@sysdig.com
+  - name: sysdiglabs
 dependencies:
   - name: common
     # repository: https://charts.sysdig.com
