--- a/charts/agent/templates/daemonset.yaml
+++ b/charts/agent/templates/daemonset.yaml
@@ -282,6 +282,8 @@ spec:
               readOnly: true
             - mountPath: /host/var/lib
               name: varlib-vol
+            - mountPath: /host/var/data
+              name: vardata-vol
             - mountPath: /host/var/run
               name: varrun-vol
             {{- if (include "agent.ebpfEnabled" .) }}
@@ -300,6 +302,8 @@ spec:
               readOnly: true
             - mountPath: /host/var/lib
               name: varlib-vol
+            - mountPath: /host/var/data
+              name: vardata-vol
             - mountPath: /host/var/run
               name: varrun-vol
             {{- if (include "agent.ebpfEnabled" .) }}
@@ -425,6 +429,9 @@ spec:
         - name: varlib-vol
           hostPath:
             path: /var/lib
+        - name: vardata-vol
+          hostPath:
+            path: /var/data
         - name: varrun-vol
           hostPath:
             path: /var/run
@@ -460,6 +467,9 @@ spec:
         - name: varlib-vol
           hostPath:
             path: /var/lib
+        - name: vardata-vol
+          hostPath:
+            path: /var/data
         {{- if (include "agent.ebpfEnabled" .) }}
         - name: bpf-probes
           emptyDir: {}
