--- a/charts/node-analyzer/tests/priorityclass_test.yaml
+++ b/charts/node-analyzer/tests/priorityclass_test.yaml
@@ -2,6 +2,19 @@ suite: Node Analyzer PriorityClass tests
 templates:
   - templates/daemonset-node-analyzer.yaml
   - templates/priorityclass.yaml
+  # For checksums
+  - clusterrole-node-analyzer.yaml
+  - clusterrolebinding-node-analyzer.yaml
+  - configmap-benchmark-runner.yaml
+  - configmap-host-analyzer.yaml
+  - configmap-host-scanner.yaml
+  - configmap-image-analyzer.yaml
+  - configmap-kspm-analyzer.yaml
+  - secrets.yaml
+  - serviceaccount-node-analyzer.yaml
+  - runtimeScanner/runtime-scanner-configmap.yaml
+values:
+  - ./default_values.yaml
 tests:
   - it: Check PriorityClass limits are correctly set
     set:
