feat(agent): add tolerations for rke2 master nodes
rke2 uses unique taints on their master nodes and were not accounted
for by the default set of tolerations used by the agent pods

--- a/charts/agent/values.yaml
+++ b/charts/agent/values.yaml
@@ -279,6 +279,10 @@ tolerations:
     key: node-role.kubernetes.io/etcd
     operator: Equal
     value: "true"
+  - effect: NoExecute
+    key: CriticalAddonsOnly
+    operator: Equal
+    value: "true"
 leaderelection:
   enable: false
 localForwarder:
