feat(agent): privileged flag for Sysdig Agent
Introduce the possibility to run the Sysdig Agent with `privileged: false`,
with specific capabilities. eBPF must be enabled for that to work.

Co-authored-by: Marco Vito Moscaritolo <mavimo@gmail.com>

--- a/charts/agent/templates/securitycontextconstraint.yaml
+++ b/charts/agent/templates/securitycontextconstraint.yaml
@@ -15,7 +15,12 @@ allowHostPID: true
 allowHostPorts: false
 allowPrivilegeEscalation: true
 allowPrivilegedContainer: true
+{{- if eq "true" (include "agent.privileged" .) }}
 allowedCapabilities: []
+{{- else }}
+allowedCapabilities:
+{{ include "agent.capabilities" . }}
+{{- end }}
 allowedUnsafeSysctls: []
 defaultAddCapabilities: []
 fsGroup:
