--- a/charts/agent/templates/daemonset.yaml
+++ b/charts/agent/templates/daemonset.yaml
@@ -18,15 +18,7 @@ spec:
       labels:
         {{ include "agent.labels" . | nindent 8 }}
         {{ include "agent.daemonsetLabels" . | nindent 8 }}
-      {{- if (include "agent.gke.autopilot" .) }}
-      annotations:
-        autopilot.gke.io/no-connect: "true"
-      {{- else }}
-      {{- if .Values.daemonset.annotations }}
-      annotations:
-        {{ toYaml .Values.daemonset.annotations | nindent 8 }}
-      {{- end }}
-      {{- end }}
+      {{ include "agent.annotationsSection" . | nindent 6 }}
     spec:
       serviceAccountName: {{ template "agent.serviceAccountName" .}}
 {{- if or .Values.priorityClassName (include "agent.gke.autopilot" .) }}
@@ -178,11 +170,22 @@ spec:
           resources:
             {{- include "agent.resources" . | nindent 12 }}
           securityContext:
+            {{- if eq "true" (include "agent.privileged" .) }}
             privileged: true
             runAsNonRoot: false
             runAsUser: 0
             readOnlyRootFilesystem: false
             allowPrivilegeEscalation: true
+            {{- else }}
+            allowPrivilegeEscalation: false
+            seccompProfile:
+              type: Unconfined
+            capabilities:
+              drop:
+              - ALL
+              add:
+              {{- include "agent.capabilities" . | nindent 14 }}
+            {{- end }}
           env:
             - name: K8S_NODE
               valueFrom:
