set defaults for DRY_RUN and DENY_ON_ERROR

--- a/charts/admission-controller/templates/webhook/deployment.yaml
+++ b/charts/admission-controller/templates/webhook/deployment.yaml
@@ -57,9 +57,9 @@ spec:
             - name: DEFAULT_TIMEOUT
             - value: {{ .Values.webhook.timeoutSeconds}}
             - name: DENY_ON_ERROR
-              value: {{ .Values.webhook.denyOnError | quote }}
+              value: {{ .Values.webhook.denyOnError | default "false" | quote }}
             - name: DRY_RUN
-              value: {{ .Values.webhook.dryRun | quote }}
+              value: {{ .Values.webhook.dryRun | default "true" | quote }}
             {{- if (or (include "webhook.httpProxy" .) (include "webhook.httpsProxy" .) (include "webhook.noProxy" .) )}}
             - name: HTTP_PROXY
               value: {{ include "webhook.httpProxy" . }}
