update image and chart versions

--- a/charts/admission-controller/values.yaml
+++ b/charts/admission-controller/values.yaml
@@ -190,7 +190,7 @@ webhook:
       # The KSPM Admission Controller image repository
       repository: sysdig/secure-admission-controller
       # The KSPM Admission Controller image tag
-      tag: 1.0.1
+      tag: 1.27.0-rc
       # Specifies the image digest value.  If set, this value is used instead of the tag value
       digest:
       # The PullPolicy for KSPM Admission Controller image
