feat(common): add me2 region support
Add support for the me2 SaaS region into the common chart.

--- a/charts/cluster-scanner/tests/notes_test.yaml
+++ b/charts/cluster-scanner/tests/notes_test.yaml
@@ -54,6 +54,15 @@ tests:
       - matchRegexRaw:
           pattern: https://app.au1.sysdig.com
 
+  - it: Checking region 'me2'
+    set:
+      global:
+        sysdig:
+          region: me2
+    asserts:
+      - matchRegexRaw:
+          pattern: https://app.me2.sysdig.com
+
   - it: Checking region 'au-syd-monitor'
     set:
       global:
