--- a/charts/agent/tests/api_endpoint_region_test.yaml
+++ b/charts/agent/tests/api_endpoint_region_test.yaml
@@ -70,6 +70,18 @@ tests:
           path: data['dragent.yaml']
           pattern: .*ingest\.au1\.sysdig\.com.*
 
+  - it: Checking region 'me2'
+    set:
+      global:
+        sysdig:
+          region: me2
+    asserts:
+      - isKind:
+          of: ConfigMap
+      - matchRegex:
+          path: data['dragent.yaml']
+          pattern: .*ingest\.me2\.sysdig\.com.*
+
   - it: Checking region 'au-syd-monitor'
     set:
       global:
