specify namespace for test-rollout pods

--- a/charts/agent/templates/tests/test-rollout.yaml
+++ b/charts/agent/templates/tests/test-rollout.yaml
@@ -3,6 +3,7 @@ kind: Pod
 metadata:
   name: "{{ include "agent.fullname" . }}-test-rollout"
   labels:
+    namespace: {{ include "agent.namespace" . }}
     helm.sh/chart: {{ include "agent.chart" . }}
     app.kubernetes.io/version: {{ .Chart.AppVersion | quote }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
