--- a/charts/node-analyzer/templates/tests/test-rollout.yaml
+++ b/charts/node-analyzer/templates/tests/test-rollout.yaml
@@ -3,6 +3,7 @@ kind: Pod
 metadata:
   name: "{{ include "nodeAnalyzer.fullname" . }}-test-rollout"
   labels:
+    namespace: {{ include "nodeAnalyzer.namespace" . }}
     helm.sh/chart: {{ include "nodeAnalyzer.chart" . }}
     app.kubernetes.io/version: {{ .Chart.AppVersion | quote }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
