--- a/charts/rapid-response/templates/tests/test-rollout.yaml
+++ b/charts/rapid-response/templates/tests/test-rollout.yaml
@@ -3,6 +3,7 @@ kind: Pod
 metadata:
   name: "{{ include "rapidResponse.fullname" . }}-test-rollout"
   labels:
+    namespace: {{ .Release.Namespace }}
     helm.sh/chart: {{ include "rapidResponse.chart" . }}
     app.kubernetes.io/version: {{ .Chart.AppVersion | quote }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
