--- a/charts/cluster-scanner/values.yaml
+++ b/charts/cluster-scanner/values.yaml
@@ -323,5 +323,5 @@ ssl:
     # Provide the filename that is defined inside the existing ConfigMap
     existingCaConfigMapKeyName:
 
-# Add option to be able to disable platform services
+# Option to make it possible to disable platform services
 enablePlatformServices: true
