revert changes on greeting workflow

--- a/.github/workflows/greeting.yaml
+++ b/.github/workflows/greeting.yaml
@@ -10,6 +10,7 @@ jobs:
       pull-requests: write
     name: Greeting comment upon PR from fork
     runs-on: ubuntu-latest
+    if: github.event_name == 'pull_request_target' && github.event.pull_request.head.repo.full_name != 'sysdiglabs/charts'
     steps:
       - name: Issue the greeting comment
         uses: peter-evans/create-or-update-comment@v4
